@@ -444,6 +444,7 @@ ORDINARY_PROGS = \
 	uint32_to_uint64 \
 	uint64_from_bytes \
 	uint64_ground_term \
+	uint64_string_conv \
 	uint64_switch_test \
 	uint8_switch_test \
 	uint_switch_test \
